--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="app.css">
     <title>Color Changer</title>
 </head>
-<body class="d-flex">
+<body>
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col text-center">
                 <h1>Color Changer App</h1>
                 <button type="button" class="btn btn-outline-dark">Change Color</button>
             </div>
